--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "api-devsecops-insecure",
-  "version": "1.0.0",
-  "description": "API REST volontairement non sécurisée pour POC pédagogique",
+  "name": "api-devsecops",
+  "version": "2.0.0",
+  "description": "API REST - Version sécurisée et non sécurisée",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "reset-db": "node reset-db.js"
+    "start:secure": "node server-secure.js",
+    "reset-db": "node reset-db.js",
+    "dev": "nodemon server.js",
+    "dev:secure": "nodemon server-secure.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
-    "better-sqlite3": "^11.0.0"
+    "better-sqlite3": "^11.0.0",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "helmet": "^7.1.0",
+    "cors": "^2.8.5",
+    "express-rate-limit": "^7.1.5",
+    "joi": "^17.11.0",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
