--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   api:
     build: .
@@ -7,10 +5,10 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      # Montage du volume pour persister la base de données
       - ./data:/app/data
     environment:
       - NODE_ENV=production
+      - JWT_SECRET=Hjr7hBqrvsd91-abCD45!Hdtw@nwbyaKkTq2prjzvVX6P # exemple fort
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/health"]
@@ -18,4 +16,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+      - sonarnet
 
+networks:
+  sonarnet:
+    external: true
