--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,13 @@
 services:
-  api:
+  api-devsecops:
     build: .
     container_name: api-devsecops
     ports:
       - "3000:3000"
-    volumes:
-      - ./data:/app/data
+    # ...tes volumes
     environment:
       - NODE_ENV=production
-      - JWT_SECRET=Hjr7hBqrvsd91-abCD45!Hdtw@nwbyaKkTq2prjzvVX6P # exemple fort
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:3000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+      - JWT_SECRET=Hjr7hBqrvsd91-abCD45!Hdtw@nwbyaKkTq2prjzvVX6P
     networks:
       - sonarnet
 
